Updated markdown header in modeling.ipynb

--- a/Starter Code/modeling.ipynb
+++ b/Starter Code/modeling.ipynb
@@ -5,7 +5,7 @@
    "id": "97e62675-3807-4172-bda1-bacfe5fd9b95",
    "metadata": {},
    "source": [
-    "### WEEK 3: MODELING\n",
+    "MODELING\n",
     "\n",
     "**DOWNLOAD ME**\n",
     "\n",
